testdata/baselines/reference/submodule/compiler/jsxChildrenArrayWrongType.errors.txt
index.tsx(9,27): error TS2304: Cannot find name 'React'.


==== index.tsx (1 errors) ====
    /// <reference path="/.lib/react18/react18.d.ts" />
    /// <reference path="/.lib/react18/global.d.ts" />
    
    // target is ES5, so no `Iterable` type is present.
    
    interface PropsType {
        children: [string, number] | boolean[];
    }
    declare class Foo extends React.Component<PropsType, {}> {}
                              ~~~~~
!!! error TS2304: Cannot find name 'React'.
    const b = (
        <Foo>
            {<div/> as unknown}
            {"aa"}
        </Foo>
    );